--- a/VisorGisSw3/views/user/registrar.jade
+++ b/VisorGisSw3/views/user/registrar.jade
@@ -3,6 +3,9 @@ extends ../templates/default
 block content
   div(class='row')
     div(class='col-md-6 col-md-offset-3')
+      //-  if mensaje.length > 0
+      //-   div(class='alert alert-success' role='alert')= mensaje
+
       div(class='panel panel-default')
         div(class='panel-heading')= 'Registrarme'
         div(class='panel-body')
@@ -25,4 +28,7 @@ block content
             div(class='form-group')
               label(for="email")= 'Email'
               input(type='email' name='email' id='email' placeholder='Email' class='form-control')
+            div(class='form-group')
+              label(for="tel")= 'Telefono'
+              input(type='text' name='tel' id='tel' placeholder='Telefono' class='form-control')
             button(type="submit" class='btn btn-default')= 'Registrarme'
