--- a/VisorGisSw3/views/administrador/gestionarUs.jade
+++ b/VisorGisSw3/views/administrador/gestionarUs.jade
@@ -1,49 +1,67 @@
 extends ../templates/default 
 block content
+	center
+		div(class='col-md-2 col-md-offset-5')
+			form(action='' method='get' autocomplete='on')
+				table(border='0')
+					tbody
+					tr
+						td
+						input(type='text' name='ide' id='ide' placeholder='Idetificación' class='form-control')
+					tr
+						td
+						input(type='text' name='us' id='us' placeholder='Usuario' class='form-control')
+					tr
+						td
+							tr
+								center
+									br
+									td
+									imput(type="button", name='Modificar', value='Modificar', class='btn btn-default' onclick='RedireccionarABoton1()' )= 'Modificar'
+									td
+									imput(type="button", name='Eliminar', class='btn btn-default' onclick='RedireccionarABoton2()' )= 'Eliminar'
 
-  center
-    table(border='0')
-      tbody
-        tr
-          td
-            input(type='text' name='ide' id='ide' placeholder='Idetificación' class='form-control')
-        tr
-          td
-            input(type='text' name='us' id='us' placeholder='Usuario' class='form-control')
-        tr
-          td
-            center
-                button(type="submit" class='btn btn-default' onclick=" location.href='http://localhost:3000/user/mofificar'+ ide " )= 'Modificar'  
-                button(type="submit" class='btn btn-default' onclick=" location.href='http://www.google.com' " )= 'Eliminar'
+			script(type='text/javascript').
+
+							function RedireccionarABoton1(){
+							var identificacion = document.getElementById("ide").value;
+							var usuario = document.getElementById("us").value;
+							location.href='http://localhost:3000/user/modificar/'+identificacion+usuario;
+							}
+							function RedireccionarABoton2(){
+							var identificacion = document.getById("ide").value;
+							var usuario = document.getById("us").value;
+							location.href="http://www.facebook.com"; // cambiela aqui a una ruta
+							}
 
 
- 
-  div(class=['ui', 'container', 'grid', 'stackable'])
-      div(class=['sixteen', 'wide', 'column'])
 
-        h2(class=['ui', 'header', 'blue', 'dividing'])= 'Lista de Usuarios'
-    
-        table(class=['ui', 'table', 'celled'] id = 'tbl-usuarios')
-          thead
-              tr
-                  th='Identificacion'
-                  th='Nombre'
-                  th='Apellido'
-                  th='Usuarrio'
-                  th='fecha de nacimiento'
-                  th='Email'
-                  th='Telefono'
-                  th='Tipo'
-                  th='Fecha de registro'                
-          tbody
-              each usuario in usuarios
-                tr
-                  td(id='identificacion')= usuario.identificacion
-                  td= usuario.nombre
-                  td= usuario.apellido
-                  td= usuario.usuario
-                  td= usuario.nacimiento
-                  td= usuario.email
-                  td= usuario.telefono
-                  td= usuario.roll
-                  td= usuario.fecha_registro
+	div(class=['ui', 'container', 'grid', 'stackable'])
+	div(class=['sixteen', 'wide', 'column'])
+
+		h2(class=['ui', 'header', 'blue', 'dividing'])= 'Lista de Usuarios'
+
+		table(class=['ui', 'table', 'celled'] id = 'tbl-usuarios')
+			thead
+				tr
+					th='Identificacion'
+					th='Nombre'
+					th='Apellido'
+					th='Usuarrio'
+					th='fecha de nacimiento'
+					th='Email'
+					th='Telefono'
+					th='Tipo'
+					th='Fecha de registro'                
+			tbody2
+				each usuario in usuarios
+					tr
+						td(id='identificacion')= usuario.identificacion
+						td= usuario.nombre
+						td= usuario.apellido
+						td= usuario.usuario
+						td= usuario.nacimiento
+						td= usuario.email
+						td= usuario.telefono
+						td= usuario.roll
+						td= usuario.fecha_registro
