--- a/VisorGisSw3/views/user/panel.jade
+++ b/VisorGisSw3/views/user/panel.jade
@@ -14,6 +14,8 @@ block content
       button(type="submit" class='btn btn-default' onclick=" location.href='http://www.google.com' " )= 'Gestionar Comuna'
       p
       button(type="submit" class='btn btn-default' onclick=" location.href='http://www.google.com' " )= 'Gestionar Barrio'
+      p
+      button(type="submit" class='btn btn-default' onclick=" location.href='http://localhost:3000/user/visoradmin' " )= 'Visor mapping'
 
   if user.roll==2
       style.
