--- a/VisorGisSw3/views/administrador/gestionarUs.jade
+++ b/VisorGisSw3/views/administrador/gestionarUs.jade
@@ -24,9 +24,8 @@ block content
 			script(type='text/javascript').
 
 							function RedireccionarABoton1(){
-							var identificacion = document.getElementById("ide").value;
-							var usuario = document.getElementById("us").value;
-							location.href='http://localhost:3000/user/modificar/'+identificacion+usuario;
+							var iden = document.getElementById("ide").value;
+							location.href='http://localhost:3000/user/modificar/'+iden;
 							}
 							function RedireccionarABoton2(){
 							var identificacion = document.getById("ide").value;
