cambios en modificar persona

--- a/VisorGisSw3/views/user/modificar.jade
+++ b/VisorGisSw3/views/user/modificar.jade
@@ -1,8 +1,18 @@
 extends ../templates/default
 
 block content
+
+  script(type='text/javascript').
+      function selectRol(){
+        var objm=document.getElementById('sRol');
+        vale=objm.options[objm.selectedIndex].text;
+        vali=objm.options[objm.selectedIndex].value;
+        document.getElementById('tip').value=vale;
+        document.getElementById('campoIndex').value=vali;
+      };
+
   div(class='row')
-    div(class='col-md-3 col-md-offset-3')
+    div(class='col-md-6 col-md-offset-3')
       //-  if mensaje.length > 0
       //-   div(class='alert alert-success' role='alert')= mensaje
 
@@ -21,7 +31,7 @@ block content
               input(type='text' name='ape' id='ape' placeholder='Apellido' class='form-control' value=Usuario[0].apellido)
             div(class='form-group')
               label(for="nac")= 'Fecha de nacimiento'
-              input(type='date' name='nac' id='nac' placeholder='Fecha de nacimiento' class='form-control' value=Usuario[0].nacimiento)
+              input(type='date' name='nac' id='nac' placeholder='Fecha de nacimiento' class='form-control' value=y)
             div(class='form-group')
               label(for="us")= 'Usuario'
               input(type='text' name='us' id='us' placeholder='Usuario' class='form-control' value=Usuario[0].usuario)
@@ -34,4 +44,12 @@ block content
             div(class='form-group')
               label(for="tel")= 'Telefono'
               input(type='text' name='tel' id='tel' placeholder='Telefono' class='form-control' value=Usuario[0].telefono)
+            div(class='form-group')
+              label(for="tip")= 'Tipo Usuario  '
+              select(id='sRol' name='sRol' onchange='selectRol()')
+                each urol, i in rol
+                  option(value=i) #{urol.roll}
+            div(class='form-group')
+              label(for="reg")= 'Fecha de Registro'
+              input(type='date' name='reg' id='reg' placeholder='Fecha de Registro ' class='form-control' value=x)
             button(type="submit" class='btn btn-default')= 'Modificar'
