--- a/VisorGisSw3/views/templates/nav.jade
+++ b/VisorGisSw3/views/templates/nav.jade
@@ -32,5 +32,5 @@ nav(class="navbar navbar-default")
                 li
                   a(href="http://localhost:3000/user/visoradmin")= 'Visor'
                 li
-                  a(href="http://localhost:3000/user/gestionar")= 'Panel'
+                  a(href="http://localhost:3000/user/panel")= 'Panel'
 
