--- a/VisorGisSw3/views/administrador/modificar.jade
+++ b/VisorGisSw3/views/administrador/modificar.jade
@@ -12,7 +12,8 @@ block content
       };
 
   div(class='row')
-    div(class='col-md-6 col-md-offset-3')
+  center
+    div(class='col-md-5 col-md-offset-4')
       //-  if mensaje.length > 0
       //-   div(class='alert alert-success' role='alert')= mensaje
 
@@ -23,6 +24,10 @@ block content
             div(class='form-group')
               label(for="ide")= 'Idetificación'
               input(type='text' name='ide' id='ide' placeholder='Idetificación' class='form-control' value=Usuario[0].identificacion)
+              label(for="tip")= 'Tipo Usuario  '
+              select(id='sRol' name='sRol' onchange='selectRol()')
+                each urol, i in rol
+                  option(value=i) #{urol.roll}
             div(class='form-group')
               label(for="nom")= 'Nombre'
               input(type='text' name='nom' id='nom' placeholder='Nombre' class='form-control' value=Usuario[0].nombre)
@@ -34,22 +39,24 @@ block content
               input(type='date' name='nac' id='nac' placeholder='Fecha de nacimiento' class='form-control' value=y)
             div(class='form-group')
               label(for="us")= 'Usuario'
-              input(type='text' name='us' id='us' placeholder='Usuario' class='form-control' value=Usuario[0].usuario)
+              input(type='text' name='us' id='us' placeholder='Usuario' , disabled='”disabled”' class='form-control' value=Usuario[0].usuario)
             div(class='form-group')
               label(for="pas")= 'Password'
-              input(type='text' name='pas' id='pas' placeholder='Password' class='form-control' value=Usuario[0].pass)
+              input(type='text' name='pas' id='pas' placeholder='Password' class='form-control' value=Usuario[0].pass , disabled='”disabled”')
+              input(type="checkbox", name="completed", checked=(true===false ? "checked" : undefined))
+              
             div(class='form-group')
               label(for="email")= 'Email'
               input(type='email' name='email' id='email' placeholder='Email' class='form-control' value=Usuario[0].email)
             div(class='form-group')
               label(for="tel")= 'Telefono'
               input(type='text' name='tel' id='tel' placeholder='Telefono' class='form-control' value=Usuario[0].telefono)
-            div(class='form-group')
-              label(for="tip")= 'Tipo Usuario  '
-              select(id='sRol' name='sRol' onchange='selectRol()')
-                each urol, i in rol
-                  option(value=i) #{urol.roll}
+            //- div(class='form-group')
+            //-   label(for="tip")= 'Tipo Usuario  '
+            //-   select(id='sRol' name='sRol' onchange='selectRol()')
+            //-     each urol, i in rol
+            //-       option(value=i) #{urol.roll}
             div(class='form-group')
               label(for="reg")= 'Fecha de Registro'
-              input(type='date' name='reg' id='reg' placeholder='Fecha de Registro ' class='form-control' value=x)
+              input(type='date' name='reg' id='reg' placeholder='Fecha de Registro ' class='form-control' value=x, disabled='”disabled”')
             button(type="submit" class='btn btn-default')= 'Modificar'
