--- a/VisorGisSw3/views/administrador/visoradmin.jade
+++ b/VisorGisSw3/views/administrador/visoradmin.jade
@@ -4,9 +4,11 @@ link(rel="stylesheet" href="//esri.github.io/bootstrap-map-js/src/css/bootstrapm
 
 block content
 
-  p= 'Bienvenido  ' + user.nombre +' '+user.apellido+' ---'
-      style.
-        .embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 60%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}
-      .embed-container
-        iframe(width='500', height='400', frameborder='0', scrolling='no', marginheight='0', marginwidth='0', title='ubicaciones', src='//sw3.maps.arcgis.com/apps/Embed/index.html?webmap=3ee836bf75b14970976db71ca50b8858&extent=-75.6482,1.5975,-75.5584,1.6428&zoom=true&scale=true&legendlayers=true&disable_scroll=true&theme=light')
-  
+  p= 'Identificado como  ' + user.nombre +' '+user.apellido+' ---'
+  style.
+    .embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 55%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}
+  .embed-container
+    small
+      a(href='//sw3.maps.arcgis.com/apps/Embed/index.html?webmap=4901ec48eb0c4e59b373dc758ee3438f&extent=-75.6503,1.591,-75.5605,1.6363&home=true&zoom=true&scale=true&search=true&searchextent=true&details=true&disable_scroll=false&theme=dark', style='color:#0000FF;text-align:left', target='_blank') Ver mapa más grande
+    br
+    iframe(width='500', height='400', frameborder='0', scrolling='no', marginheight='0', marginwidth='0', title='Proyecto sw3', src='//sw3.maps.arcgis.com/apps/Embed/index.html?webmap=4901ec48eb0c4e59b373dc758ee3438f&extent=-75.6503,1.591,-75.5605,1.6363&home=true&zoom=true&scale=true&search=true&searchextent=true&details=true&disable_scroll=false&theme=dark')
